k8s/sh-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-http-service
spec:
  selector:
    app: sample-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
