k8s/sh-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: localhost
          http:
            paths:
            - path: /sample
              backend:
                serviceName: sample-http-service
                servicePort: 80
